--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,47 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  height: 100%;
+}
+
+body {
+  background-color: var(--black-1);
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+.app-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  /* box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.8); */
+}
+
+.main-content {
+  flex: 1;
+  min-width: calc(100dvw - 20rem);
+}
+
+.route-container {
+  width: 100%;
+  height: 100%;
+}
+
+@theme {
+  --red-crimson: #891f1fff;
+  --red-shimmer: #c04c4dff;
+  --flax: #ecdb93ff;
+  --faint-gold: #c1a051ff;
+  --dark-gold: #b08a45ff;
+  --black-1: #10100eff;
+  --black-2: #222220ff;
+  --gray-1: #4b4b4bff;
+  --gray-2: #c2c4c3ff;
+}
