--- a/src/app/shared/components/layout/navbar/navbar.html
+++ b/src/app/shared/components/layout/navbar/navbar.html
@@ -47,7 +47,7 @@
     <!-- <div class="login-register"> -->
     @if(!isLogin()){
     <div
-      class="flex rounded-full backdrop-blur-sm z-50 justify-center shadow-lg shadow-amber-300/15"
+      class="flex rounded-full backdrop-blur-sm z-50 text-lg justify-center shadow-lg shadow-amber-300/15"
     >
       <button
         (click)="navigateRoute('/login')"
