--- a/src/app/shared/components/layout/sidebar/sidebar.html
+++ b/src/app/shared/components/layout/sidebar/sidebar.html
@@ -82,7 +82,7 @@
       class="w-14 h-14 rounded-full contain-content border-4 border-yellow-500"
     />
     <div class="flex flex-col">
-      <div class="font-semibold text-amber-400 text-md">LostEmperor_Fedor</div>
+      <div class="font-semibold text-amber-400 text-md">LastEmperor_Fedor</div>
       <div class="text-sm text-gray-300">El Ultimo Emperador | Sambo | Judo</div>
     </div>
   </div>
