--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <div class="app-container min-h-screen flex">
   <div class="grow flex flex-col">
     <app-navbar class="flex justify-center" />
-    <div class="grow flex pt-6">
+    <div class="grow flex ">
       <app-sidebar class="w-64 shrink-0 z-1000"></app-sidebar>
       <main class="main-content">
         <router-outlet />
