--- a/src/app/shared/components/layout/navbar/navbar.html
+++ b/src/app/shared/components/layout/navbar/navbar.html
@@ -2,11 +2,6 @@
   <div class="flex justify-between flex-row items-center">
     <div class="flex items-center flex-col space-x-2 relative">
       <div class="image-logo"></div>
-      <div
-        class="text-xs absolute bottom-0 w-[150px] text-gray-400 font-medium ml-2 border-l border-red-600 pl-2 hidden sm:block"
-      >
-        CONNECT. TRAIN. GROW
-      </div>
     </div>
 
     <div
@@ -21,7 +16,7 @@
           >
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
               <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
-            </svg>            
+            </svg>
           </a>
         </li>
         <li class="flex flex-row gap-1 items-center">
@@ -34,7 +29,7 @@
               <path
                 d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
               />
-            </svg>            
+            </svg>
           </a>
         </li>
       </ul>
@@ -62,10 +57,16 @@
         Registro
       </button>
     </div>
+    }@else{
+    <div class="flex flex-col items-center gap-2">
+      <span class="text-white">Hola, {{ name() }}</span>
+      <button
+        class="py-2 px-3 border border-red-800 rounded-full bg-red-800/30 hover:bg-red-500/30 backdrop-blur-sm"
+        (click)="logout()"
+      >
+        Cerrar Sesion
+      </button>
+    </div>
     }
-    <!-- <span class="user-welcome">Hola, {{ name() }}</span>
-      <button class="principal-btn logout" (click)="logout()">Cerrar Sesion</button>
-      -->
-    <!-- </div> -->
   </div>
 </nav>
