Sprint 2: Feed, Post, Likes, Sort and Profile

--- a/src/app/shared/components/layout/navbar/navbar.html
+++ b/src/app/shared/components/layout/navbar/navbar.html
@@ -12,7 +12,7 @@
           <a
             routerLink="/feed"
             routerLinkActive="text-red-600 font-bold bg-white/80 rounded-full hover:text-red-400 hover:font-bold"
-            class="flex items-center space-x-1 hover:text-amber-300 hover:font-semibold transition-colors duration-300 ease-in px-4 py-2"
+            class="flex items-center space-x-1 hover:text-amber-300 hover:font-semibold transition-all duration-300 ease-in px-4 py-2"
           >
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
               <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
@@ -21,9 +21,9 @@
         </li>
         <li class="flex flex-row gap-1 items-center">
           <a
-            routerLink="/profile/me"
+            routerLink="/profile"
             routerLinkActive="text-red-600 font-bold bg-white/80 rounded-full hover:text-red-400 hover:font-bold"
-            class="flex items-center space-x-1 text-shadow-lg hover:text-amber-300 hover:font-semibold transition-colors duration-300 ease-in px-4 py-2"
+            class="flex items-center space-x-1 text-shadow-lg hover:text-amber-300 hover:font-semibold transition-all duration-300 ease-in px-4 py-2"
           >
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
               <path
