--- a/src/app/shared/components/layout/sidebar/sidebar.html
+++ b/src/app/shared/components/layout/sidebar/sidebar.html
@@ -1,14 +1,19 @@
 <aside
   class="bg-zinc-700/30 p-4 flex flex-col h-full border-t-3 border-t-red-800 border-r border-gray-600 backdrop-blur-sm shadow-lg shadow-amber-300/25 z-1000"
 >
-  <div class="flex items-center space-x-3 p-6 mb-5 relative">
+  <div class="flex items-center space-x-3 p-6 mb-8 relative">
     <div class="image-logo absolute -left-6"></div>
     <div class="absolute right-6">
       <div class="text-amber-400 text-2xl font-bold">OSS!</div>
       <div class="text-xs border-l border-red-600 pl-1 text-gray-200">CONNECT. TRAIN. GROW</div>
     </div>
   </div>
-
+  @if(!isLogin()){
+  <div class="flex flex-col text-center text-xl font-bold mt-[70%] justify-center">
+    <h3>Debes iniciar sesion</h3>
+    <p>Para navegar</p>
+  </div>
+  } @else {
   <nav class="grow space-y-1">
     <a
       routerLink="/feed"
@@ -21,7 +26,7 @@
       <span>Inicio</span>
     </a>
     <a
-      routerLink="/profile/me"
+      routerLink="/profile"
       routerLinkActive="text-red-600 font-bold bg-white/40 rounded-full hover:text-red-400 hover:font-bold"
       class="flex items-center space-x-3 p-3 rounded-br-xl hover:bg-red-700 hover:text-white transition-colors duration-300"
     >
@@ -44,18 +49,7 @@
       </svg>
       <span>Messages</span>
     </a>
-    <a
-      routerLink="/settings"
-      routerLinkActive="bg-red-600 text-white font-semibold"
-      class="flex items-center space-x-3 p-3 rounded-lg hover:bg-red-700 transition-colors duration-200"
-    >
-      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-        <path
-          d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.09-.7-1.71-.98L15 2H9c-.28 0-.5.22-.5.5s.22.5.5.5h6l-1 2.49c-.62.28-1.19.58-1.71.98l-2.49-1c-.22-.08-.49-.01-.61.22l-2 3.46c-.12.22-.07.49.12.64l2.11 1.65c-.04.32-.07.64-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.09.7 1.71.98L9 22H15c.28 0 .5-.22.5-.5s-.22-.5-.5-.5h-6l1-2.49c.62-.28 1.19-.58 1.71-.98l2.49 1c.22.08.49.01.61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"
-        />
-      </svg>
-      <span>Settings</span>
-    </a> -->
+    -->
     @if(isAdmin()){
     <a
       routerLink="/admin/dashboard"
@@ -67,23 +61,26 @@
           d="M17 11c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v5c0 .55.45 1 1 1h4zm-6 0c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1H7c-.55 0-1 .45-1 1v5c0 .55.45 1 1 1h4zm-6 6c.55 0 1-.45 1-1v-5c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1v5c0 .55.45 1 1 1h4zm6 0c.55 0 1-.45 1-1v-5c0-.55-.45-1-1-1H7c-.55 0-1 .45-1 1v5c0 .55.45 1 1 1h4zm6 0c.55 0 1-.45 1-1v-5c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v5c0 .55.45 1 1 1h4z"
         />
       </svg>
-      <span>Admin Dashboard</span>
+      <span>Panel de Control</span>
     </a>
-
     }
   </nav>
 
   <div
     class="mt-auto p-4 bg-gray-600/30 rounded-xl flex flex-row gap-3 justify-center object-center items-center contain-layout"
   >
+    @if(userImage()){
     <img
-      src="https://m.media-amazon.com/images/M/MV5BNzUxZmY0MGQtMzgwMi00Yzg3LTk2ZjctMjI1NjBmNjcwOTEwXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"
+      [src]="userImage()"
       alt="User Profile"
-      class="w-14 h-14 rounded-full contain-content border-4 border-yellow-500"
+      class="w-12 h-12 rounded-full border-4 border-yellow-500"
     />
+
+    }
     <div class="flex flex-col">
-      <div class="font-semibold text-amber-400 text-md">LastEmperor_Fedor</div>
-      <div class="text-sm text-gray-300">El Ultimo Emperador | Sambo | Judo</div>
+      <div class="font-semibold text-amber-400 text-md">{{ userName() }}</div>
+      <div class="text-sm text-gray-300">{{ userMartialArts() }}</div>
     </div>
   </div>
+  }
 </aside>
