Sprint 2: Feed, Post, Likes, Sort and Profile

--- a/src/app/features/users/profile/profile.html
+++ b/src/app/features/users/profile/profile.html
@@ -6,7 +6,7 @@
     ></div>
   </div>
   } @else if (user()) {
-  <div class="bg-white/10 backdrop-blur-xl rounded-xl border border-red-800/20 shadow-lg shadow-red-800/30 p-8">
+  <div class="bg-white/10 backdrop-blur-xl rounded-b-4xl border border-red-800/20 shadow-lg shadow-red-800/30 p-8">
     <div class="flex items-start space-x-6">
       <div class="relative">
         <img
