--- a/src/app/features/home/feed/feed.html
+++ b/src/app/features/home/feed/feed.html
@@ -3,7 +3,7 @@
 >
   <div class="backdrop-blur-xl border-0 p-6 w-full">
     <div
-      class="flex justify-between bg-white/10 backdrop-blur-xl rounded-2xl border border-red-800/20 shadow-lg shadow-red-800/30 p-6 gap-5 items-center mb-6"
+      class="flex justify-between bg-white/10 backdrop-blur-xl rounded-b-4xl border border-red-800/20 shadow-lg shadow-red-800/30 p-6 gap-5 items-center mb-6"
     >
       <h1 class="text-3xl font-bold text-amber-400">Cuentanos...</h1>
       <button
