--- a/src/app/shared/components/loading/loading.html
+++ b/src/app/shared/components/loading/loading.html
@@ -1,1 +1,18 @@
-<p>loading works!</p>
+<div
+  class="fixed inset-0 z-9998 flex items-center justify-center bg-black/40 backdrop-blur-sm transition-all duration-300"
+>
+  <div class="relative flex flex-col items-center">
+    <div
+      class="loader-circle absolute w-16 h-16 border-2 border-amber-400 rounded-full opacity-20"
+    ></div>
+    <div
+      class="loader-circle absolute w-16 h-16 border-2 border-red-600 rounded-full opacity-20 delay-75"
+    ></div>
+
+    <img
+      src="https://res.cloudinary.com/drtikgxr8/image/upload/v1762241854/Adobe_Express_-_file_fpi0em.png"
+      class="w-16 h-16 animate-pulse relative z-10"
+      alt="Loading..."
+    />
+  </div>
+</div>
