--- a/src/app/shared/components/modal/modal.html
+++ b/src/app/shared/components/modal/modal.html
@@ -1,1 +1,51 @@
-<p>modal works!</p>
+@if (isOpen()) {
+<div
+  class="fixed inset-0 bg-black/70 backdrop-blur-md flex items-center justify-center z-1000 transition-opacity duration-300"
+  (click)="onClose()"
+>
+  <div
+    class="bg-white/10 rounded-b-2xl shadow-lg shadow-red-800/30 w-full max-w-md mx-4 overflow-hidden border-2 border-red-800/20"
+    (click)="onModalContentClick($event)"
+  >
+    <div class="flex justify-between items-center p-4 border-b border-gray-700">
+      <div class="flex items-center">
+        <div class="w-6 h-6 mr-3" [innerHTML]="getIcon()" [ngClass]="getIconClass()"></div>
+
+        <h2 class="text-xl font-semibold text-white">{{ config()?.title }}</h2>
+      </div>
+
+      @if (config()?.showCloseButton) {
+      <button
+        class="p-1 rounded-full text-gray-400 hover:text-red-600 transition-colors"
+        (click)="onClose()"
+      >
+        <span [innerHTML]="getCloseIcon()"></span>
+      </button>
+      }
+    </div>
+
+    <div class="p-6">
+      <p class="text-gray-300 text-base">{{ config()?.message }}</p>
+    </div>
+
+    <div class="flex justify-end gap-3 p-4 bg-amber-400/10 border-t border-gray-700">
+      @if (config()?.cancelButtonText) {
+      <button
+        class="py-2 px-5 rounded-md font-medium bg-gray-600/50 text-gray-200 hover:bg-red-800/50 transition-colors"
+        (click)="onCancel()"
+      >
+        {{ config()?.cancelButtonText }}
+      </button>
+      } @if (config()?.showConfirmButton) {
+
+      <button
+        class="py-2 px-5 rounded-md font-medium bg-amber-400 text-white hover:bg-amber-400/30 transition-colors"
+        (click)="onConfirm()"
+      >
+        {{ config()?.confirmButtonText || 'Confirmar' }}
+      </button>
+      }
+    </div>
+  </div>
+</div>
+}
