--- a/src/app/shared/components/splash/splash.html
+++ b/src/app/shared/components/splash/splash.html
@@ -18,7 +18,7 @@
     </div>
 
     <!-- TÍTULO CINEMÁTICO -->
-    <div #textContainer class="mt-2 flex space-x-1 overflow-hidden">
+    <div #textContainer class="mt-2 flex space-x-1 ">
       <span class="title-letter">O</span>
       <span class="title-letter">S</span>
       <span class="title-letter">S</span>
