--- a/src/app/features/users/admin/user/user.html
+++ b/src/app/features/users/admin/user/user.html
@@ -1,1 +1,5 @@
-<p>user works!</p>
+<div
+  class="flex items-center min-h-screen justify-center bg-red-900/5 py-12 sm:px-6 lg:px-8 border-t-3 border-t-red-800"
+>
+  <p>user works!</p>
+</div>
