--- a/src/app/features/users/profile/edit-profile/edit-profile.html
+++ b/src/app/features/users/profile/edit-profile/edit-profile.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="flex items-center min-h-screen justify-center bg-red-900/5 py-12 sm:px-6 lg:px-8 border-t-3 border-t-red-800">
   <h1>Edit Profile</h1>
   <p>Edit profile form will go here.</p>
 </div>
