--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
   <div class="grow flex flex-col">
     <app-navbar class="flex justify-center" />
     <div class="grow flex ">
-      <app-sidebar class="w-64 shrink-0 z-1000"></app-sidebar>
+      <app-sidebar class="w-64 shrink-0 z-1000 max-md:hidden"></app-sidebar>
       <main class="main-content">
         <router-outlet />
       </main>
