--- a/src/app/shared/components/comments/comment-item/comment-item.html
+++ b/src/app/shared/components/comments/comment-item/comment-item.html
@@ -1,1 +1,65 @@
-<p>comment-item works!</p>
+<div class="flex gap-3 p-3 group/item hover:bg-white/5 rounded-lg transition-colors">
+  <div class="shrink-0 pt-1">
+    <img
+      [src]="comment.author.profileImage || 'assets/images/default-user.png'"
+      [alt]="comment.author.username"
+      class="w-8 h-8 rounded-full object-cover border border-white/10"
+    />
+  </div>
+
+  <div class="grow text-sm w-full">
+    @if (!isEdit()) {
+    <div class="flex items-baseline justify-between">
+      <div class="flex items-center gap-2">
+        <span class="font-bold text-amber-400">{{ comment.author.username }}</span>
+        <span class="text-xs text-gray-500">{{ comment.createdAt | timeAgo }}</span>
+        @if(comment.isModified) { <span class="text-[10px] text-gray-600">(editado)</span> }
+      </div>
+
+      @if (canDelete || isMyComment) {
+      <div class="flex gap-2 opacity-0 group-hover/item:opacity-100 transition-opacity">
+        @if (isMyComment) {
+        <button
+          (click)="showEditComment()"
+          class="text-gray-400 hover:text-green-400"
+          title="Editar"
+        >
+          <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
+            />
+          </svg>
+        </button>
+        } @if(canDelete){
+
+        <button (click)="handleDelete()" class="text-gray-400 hover:text-red-400" title="Eliminar">
+          <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+            />
+          </svg>
+        </button>
+        }
+      </div>
+      }
+    </div>
+    <p class="text-gray-300 break-words leading-relaxed mt-0.5">{{ comment.content }}</p>
+    } @else {
+    <div class="w-full">
+      <app-comment-form
+        [initialValue]="comment.content"
+        placeholder="Edita tu comentario..."
+        (submitComment)="handleEditComment($event)"
+        (cancel)="showEditComment()"
+      >
+      </app-comment-form>
+    </div>
+    }
+  </div>
+</div>
