--- a/src/app/shared/components/comments/comment-list/comment-list.html
+++ b/src/app/shared/components/comments/comment-list/comment-list.html
@@ -1,1 +1,16 @@
-<p>comment-list works!</p>
+<div class="space-y-1">
+  @for (comment of comments; track comment.id) {
+  <div #commentRef class="opacity-0">
+    <app-comment-item
+      [comment]="comment"
+      [currentUserId]="currentUserId"
+      [isAdmin]="isAdmin"
+      (delete)="deleteComment.emit($event)"
+      (update)="updateComment.emit($event)"
+      >></app-comment-item
+    >
+  </div>
+  } @empty {
+  <div class="text-center py-6 text-gray-500 text-sm italic">No hay comentarios aún.</div>
+  }
+</div>
