--- a/src/app/features/users/admin/dashboard/dashboard.html
+++ b/src/app/features/users/admin/dashboard/dashboard.html
@@ -1,4 +1,130 @@
-<div class="flex items-center min-h-screen justify-center bg-red-900/5 py-12 sm:px-6 lg:px-8 border-t-3 border-t-red-800">
+<div
+  class="flex items-center min-h-screen bg-black-1 lg:p-2 justify-center bg-red-900/5 py-12 sm:px-2 lg:px-2 border-t-3 border-t-red-800"
+>
+  <div class="min-h-screen bg-black-1 p-6 lg:p-10">
+    <header
+      class="mb-10 opacity-0 animate-fade-in-down flex justify-between"
+      style="animation-delay: 0.3s"
+    >
+      <div>
+        <h1
+          class="text-4xl font-bold text-white mb-2 text-shadow-[5px_5px_5px_rgb(0_0_0_/0.15)] text-shadow-amber-400/20"
+        >
+          Panel de Control
+        </h1>
+        <p class="text-gray-400 text-xl">Bienvenido, {{ user()?.fullName }}.</p>
+      </div>
+      <div class="flex gap-3 items-center">
+        <button
+          routerLink="/admin/stats"
+          class="px-6 py-3 bg-amber-400 hover:bg-amber-300/80 text-black text-base font-semibold rounded-full transition-all duration-300 shadow-lg hover:shadow-amber-400/30 flex items-center gap-2"
+        >
+          Estadisticas
+        </button>
+        <button
+          routerLink="/admin/users"
+          class="px-6 py-3 bg-amber-400 hover:bg-amber-300/80 text-black text-base font-semibold rounded-full transition-all duration-300 shadow-lg hover:shadow-amber-400/30 flex items-center gap-2"
+        >
+          Usuarios
+        </button>
+      </div>
+    </header>
 
-    <p>dashboard works!</p>
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-5">
+      <div
+        class="bg-linear-to-br to-amber-400/40 from-black px-3 py-6 hover:bg-white/10 transition-all duration-300 group shadow-lg shadow-amber-400/20"
+      >
+        <div class="flex justify-between items-start">
+          <div>
+            <p class="text-gray-400 text-lg font-medium uppercase tracking-wider">
+              Usuarios Totales
+            </p>
+            <h3
+              class="text-4xl font-bold text-white mt-2 group-hover:scale-120 transition-transform origin-left"
+            >
+              {{ allUser() }}
+            </h3>
+          </div>
+          <div class="rounded-xl text-amber-400">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="bg-linear-to-br to-amber-400/40 from-black hover:bg-white/10 px-3 py-6 group shadow-lg shadow-amber-400/20"
+      >
+        <div class="flex justify-between items-start">
+          <div>
+            <p class="text-gray-400 text-lg font-medium uppercase tracking-wider pr-1">
+              Publicaciones
+            </p>
+            <h3
+              class="text-4xl font-bold text-white mt-2 group-hover:scale-120 transition-transform origin-left"
+            >
+              {{ allPost() }}
+            </h3>
+          </div>
+          <div class="rounded-xl text-amber-400">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="bg-linear-to-br to-amber-400/40 from-black hover:bg-white/10 transition-all px-3 py-6 group shadow-lg shadow-amber-400/20"
+      >
+        <div class="flex justify-between items-start">
+          <div class="relative z-10">
+            <p class="text-gray-400 text-lg font-medium uppercase tracking-wider">Comentarios</p>
+            <h3
+              class="text-4xl font-bold text-white mt-2 group-hover:scale-120 transition-transform origin-left"
+            >
+              {{ totalComments() }}
+            </h3>
+          </div>
+          <div class="rounded-xl text-amber-400">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4.848 2.771A49.144 49.144 0 0 1 12 2.25c2.43 0 4.817.178 7.152.52 1.978.292 3.348 2.024 3.348 3.97v6.02c0 1.946-1.37 3.678-3.348 3.97-1.94.284-3.916.455-5.922.505a.39.39 0 0 0-.266.112L8.78 21.53A.75.75 0 0 1 7.5 21v-3.955a48.842 48.842 0 0 1-2.652-.316c-1.978-.29-3.348-2.024-3.348-3.97V6.741c0-1.946 1.37-3.68 3.348-3.97Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="grid grid-cols-1 lg:grid-cols-1 gap-6">
+      <div
+        class="lg:col-span-2 bg-white/5 border border-white/10 p-6 min-h-[400px] shadow-lg shadow-amber-200/20 backdrop-blur-sm"
+      >
+        <h3 class="text-xl font-bold text-white mb-4">Actividad Reciente</h3>
+        <div class="relative h-64 w-full flex justify-center">
+          <canvas #commentsChart></canvas>
+        </div>
+      </div>
+
+      <!-- <div class="bg-white/5 border border-white/10 p-6 shadow-lg shadow-amber-200/20">
+        <h3 class="text-xl font-bold text-white mb-4">Nuevos Usuarios</h3>
+      </div> -->
+    </div>
+  </div>
 </div>
