--- a/src/app/features/users/admin/user/user.html
+++ b/src/app/features/users/admin/user/user.html
@@ -1,5 +1,160 @@
 <div
-  class="flex items-center min-h-screen justify-center bg-red-900/5 py-12 sm:px-6 lg:px-8 border-t-3 border-t-red-800"
+  class="flex items-center min-h-screen justify-center bg-red-900/5 py-12 sm:px-6 lg:px-8 border-t-3 border-t-red-800 flex-col"
 >
-  <p>user works!</p>
+  <div class="min-h-screen w-full">
+    <div class="mb-4 sticky z-10">
+      <a
+        routerLink="/admin/dashboard"
+        class="inline-flex items-center px-4 py-2 bg-black/30 border-2 backdrop-blur-md border-white/10 rounded-full text-gray-300 hover:text-amber-400 hover:border-amber-400/50 transition-all duration-300 group shadow-lg"
+      >
+        <svg
+          class="w-5 h-5 ml-2 transform group-hover:-translate-x-3 transition-transform"
+          fill="none"
+          stroke="currentColor"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M10 19l-7-7m0 0l7-7m-7 7h18"
+          />
+        </svg>
+      </a>
+    </div>
+
+    <header
+      class="mb-10 opacity-0 animate-fade-in-down flex justify-between gap-4"
+      style="animation-delay: 0.3s"
+    >
+      <div>
+        <h1
+          class="text-4xl font-bold text-white mb-2 text-shadow-[5px_5px_5px_rgb(0_0_0_/0.15)] text-shadow-amber-400/20"
+        >
+          Panel de Usuarios
+        </h1>
+      </div>
+      <div class="flex gap-3 items-center">
+        <button
+          (click)="openCreateUserModal()"
+          class="px-6 py-3 bg-amber-400 hover:bg-amber-300/80 text-black text-base font-semibold rounded-full transition-all duration-300 shadow-lg hover:shadow-amber-400/30 flex items-center gap-2"
+        >
+          Crear Usuario
+        </button>
+      </div>
+    </header>
+
+    @if(showCreateUserModal()){
+    <app-create-user-modal
+      (close)="closeCreateUserModal()"
+      (userCreated)="onUserCreated()"
+    ></app-create-user-modal>
+    }
+
+    <section
+      class="bg-white/5 border border-white/10 overflow-hidden animate-fade-in-up shadow-xl backdrop-blur-sm shadow-amber-200/20"
+      style="animation-delay: 0.2s"
+    >
+      <div class="p-6 border-b border-white/10 flex justify-between items-center">
+        <h3 class="text-xl font-bold text-white flex items-center gap-2">
+          <svg class="w-5 h-5 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"
+            />
+          </svg>
+          Lista de Usuarios
+        </h3>
+      </div>
+      <div class="overflow-x-auto">
+        <table class="w-full text-left text-gray-400">
+          <thead>
+            <tr>
+              <th class="px-2 py-4 text-center">Usuario</th>
+              <th class="px-6 py-4">Nombre</th>
+              <th class="px-6 py-4">Apellido</th>
+              <th class="px-6 py-4">Email</th>
+              <th class="px-6 py-4 text-center">Rol</th>
+              <th class="px-6 py-4 text-center">Estado</th>
+              <th class="px-6 py-4 text-right">Acciones</th>
+            </tr>
+          </thead>
+          <tbody class="divide-y divide-white/5">
+            @if (isload()) {
+            <tr>
+              <td colspan="5" class="px-6 py-12 text-center">
+                <div class="flex justify-center">
+                  <div
+                    class="animate-spin rounded-full h-8 w-8 border-4 border-amber-400 border-t-transparent"
+                  ></div>
+                </div>
+              </td>
+            </tr>
+            } @else { @for (user of users(); track user.id) {
+            <tr>
+              <td class="px-2 py-4">
+                <div class="flex flex-col items-center">
+                  <img
+                    [src]="user.profileImage"
+                    [alt]="user.username"
+                    class="w-10 h-10 rounded-full object-cover border border-white/10"
+                  />
+                  <div>
+                    <span class="font-medium text-white">{{ user.username }}</span>
+                  </div>
+                </div>
+              </td>
+              <td class="px-6 py-4">{{ user.firstName | cutLongText : 6 : true }}</td>
+              <td class="px-6 py-4">{{ user.lastName | cutLongText : 7 : true }}</td>
+              <td class="px-6 py-4 font-mono text-sm">{{ user.email | cutLongText : 8 : true }}</td>
+              <td class="px-6 py-4 text-center">
+                <span
+                  class="px-2 py-1 rounded-full font-bold border"
+                  [ngClass]="
+                    user.role === 'admin'
+                      ? 'bg-amber-400/10 text-amber-400 border-amber-400'
+                      : 'bg-sky-400/10 text-sky-400 border-sky-400'
+                  "
+                >
+                  {{ user.role | uppercase }}
+                </span>
+              </td>
+              <td class="px-6 py-4 text-center">
+                <span
+                  class="inline-flex items-center gap-1.5 px-2 py-1 border rounded-full font-medium"
+                  [ngClass]="
+                    user.isActive
+                      ? 'bg-green-500/10 text-green-400 border-green-400'
+                      : 'bg-red-500/10 text-red-400 border-red-400'
+                  "
+                >
+                  <span
+                    class="w-1.5 h-1.5 rounded-full"
+                    [ngClass]="user.isActive ? 'bg-green-500' : 'bg-red-500'"
+                  ></span>
+                  {{ user.isActive ? 'Activo' : 'Desactivado' }}
+                </span>
+              </td>
+              <td class="px-6 py-4 text-right">
+                <button
+                  (click)="handlerStatusUser(user)"
+                  class="text-lg font-medium px-2 py-1 transition-all duration-300 border"
+                  [ngClass]="
+                    user.isActive
+                      ? 'text-red-400 hover:bg-red-400/10 hover:border-red-400/30 shadow-lg hover:shadow-red-400/30 '
+                      : 'text-green-400 hover:bg-green-400/10 hover:border-green-400/30 shadow-lg hover:shadow-green-400/30 '
+                  "
+                >
+                  {{ user.isActive ? 'Desactivar' : 'Activar' }}
+                </button>
+              </td>
+            </tr>
+            } }
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </div>
 </div>
