--- a/src/app/features/home/feed/feed.html
+++ b/src/app/features/home/feed/feed.html
@@ -24,7 +24,7 @@
 
     @if(showCreateModal()){
     <div
-      class=" absolute inset-0 bg-black/90 backdrop-blur-xl flex items-start justify-center z-50 p-8"
+      class="absolute inset-0 bg-black/90 backdrop-blur-xl flex items-start justify-center z-50 p-8"
     >
       <div class="border border-amber-400/30 p-6 w-full max-w-2xl">
         <div class="flex justify-between items-center mb-4">
@@ -176,29 +176,33 @@
 
     <!-- Estados de carga y error -->
     @if (isLoading()) {
-    <div class="flex justify-center items-center py-12">
-      <div
-        class="animate-spin rounded-full h-12 w-12 border-4 border-amber-400 border-t-transparent"
-      ></div>
+    <div class="space-y-6 animate-pulse">
+      @for (i of [1,2,3]; track i) {
+      <div class="bg-white/5 rounded-xl p-6 h-64 border border-white/5">
+        <div class="flex space-x-4">
+          <div class="rounded-full bg-white/10 h-12 w-12"></div>
+          <div class="flex-1 space-y-4 py-1">
+            <div class="h-4 bg-white/10 rounded w-3/4"></div>
+            <div class="h-4 bg-white/10 rounded"></div>
+          </div>
+        </div>
+      </div>
+      }
     </div>
-    } @if (errorMessage() && !showCreateModal()) {
-    <div
-      class="bg-green-500/20 border border-green-500/50 rounded-lg p-4 mb-6"
-      *ngIf="errorMessage()?.includes('éxito')"
-    >
+    } @if (errorMessage() && !showCreateModal()) { @if(errorMessage()?.includes('éxito')){
+    <div class="bg-green-500/20 border border-green-500/50 rounded-lg p-4 mb-6">
       <p class="text-green-200">{{ errorMessage() }}</p>
     </div>
-    <div
-      class="bg-red-500/20 border border-red-500/50 rounded-lg p-4 mb-6"
-      *ngIf="!errorMessage()?.includes('éxito')"
-    >
+    } @if(!errorMessage()?.includes('éxito')){
+    <div class="bg-red-500/20 border border-red-500/50 rounded-lg p-4 mb-6">
       <p class="text-red-200">{{ errorMessage() }}</p>
     </div>
-    }
+
+    } }
 
     <!-- Lista de posts -->
     @if (!isLoading() && !errorMessage()) { @if (posts().length > 0) {
-    <div class="space-y-6">
+    <div class="space-y-6 flex flex-col object-center items-center justify-center">
       @for (post of posts(); track post.id) {
       <app-post-card
         [post]="post"
@@ -206,7 +210,7 @@
         [isAdmin]="isAdmin()"
         (like)="handleLike($event)"
         (unlike)="handleUnlike($event)"
-        (delete)="handleDelete($event)"       
+        (delete)="handleDelete($event)"
       />
       }
     </div>
